<resources xmlns:tools="http://schemas.android.com/tools">
    <!--	<string name="app_name">TSW SBK DEMO</string>-->
    <string name="app_name">ML-Kit</string>

    <string name="error_odoo_server_error">Odoo Server Error</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="invalid_username_or_password">Invalid Username or Password</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="host_url">Host URL</string>
    <string name="enter_url">Enter URL</string>
    <string name="host_name">https://dev.appex.co</string>
    <string name="label_select_database">Select Database</string>

    <string name="error_provide_username">Provide Username</string>
    <string name="error_provide_password">Provide Password</string>
    <string name="error_provide_name">Provide Name</string>
    <string name="search">Search...</string>
    <string name="city">City</string>
    <string name="street_2">Street 2</string>
    <string name="street">Street</string>
    <string name="pincode">Pincode</string>
    <string name="website">Website</string>
    <string name="fax" tools:ignore="ExtraTranslation">Fax</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="mobile">Mobile</string>
    <string name="phone">Phone</string>
    <string name="error_name_required">Customer Name Required</string>
    <string name="update_customer">Update Customer successfully</string>
    <string name="create_customer">Create Customer successfully</string>
    <string name="create_product">Create Product successfully</string>
    <string name="invoices">Invoices</string>
    <string name="customer">Customer</string>
    <string name="invoice_date">Invoice Date</string>
    <string name="due_date">Due Date</string>
    <string name="salesperson">Salesperson</string>
    <string name="untaxed_amount">Untaxed Amount :</string>
    <string name="tax">Tax :</string>
    <string name="total">Total :</string>
    <string name="common_ok">Ok</string>
    <string name="save_password">Keep me logged in.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_customer">Customer</string>
    <string name="menu_invoice">Invoice</string>
    <string name="menu_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="communicate">Communicate</string>
    <string name="no_invoices_available_for_viewing">No invoices available for viewing</string>
    <string name="confirm_logout">Press back again to quit the app</string>
    <string name="common_cancel">cancel</string>
    <string name="add_invoice_lines">Add Invoice Lines</string>
    <string name="title_activity_salesperson">SalespersonActivity</string>
    <string name="save">Save</string>
    <string name="validate">Validate</string>
    <string name="register_payment">Register Payment</string>
    <string name="invoice_lines">Invoice Lines</string>
    <string name="receipts">Receipts</string>
    <string name="internal_transfer">Internal Transfer</string>
    <string name="pick">Pick</string>
    <string name="product">Product</string>
    <string name="delivery_orders">Delivery Orders</string>
    <string name="inventory">Inventory</string>
    <string name="confirm_delete_item_product">Are you sure you want to delete this item ?</string>
    <string name="general_information">General Information</string>
    <string name="menu_confirm_logout">Are you sure you want to log out?</string>
    <string name="edit">Edit</string>
    <string name="canceled">Canceled</string>
    <string name="powered_by_tsw">Powered by TSW</string>
    <string name="create_account"><u>Create Account</u></string>
    <string name="search_customer">Search Customer</string>
    <string name="search_invoices">Search Invoices</string>
    <string name="search_product">Search Product</string>
    <string name="quotations">Quotations</string>
    <string name="sales">Sales</string>
    <string name="order">Order</string>
    <string name="cancel">Cancel</string>
    <string name="warehouse_operation">Warehouse Operations</string>
    <string name="select_driver">Select Driver</string>
    <string name="no_driver_found">No Driver Found!</string>
    <string name="select_date_time">Select Date/Time</string>
    <string name="driver">Driver</string>
    <string name="assign_driver">Assign Driver</string>
    <string name="schedule_date">Schedule Date</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Signup</string>


</resources>